--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,23 @@
 {
   "name": "Hızlı Kurye",
-  "short_name": "HızlıKurye",
+  "short_name": "Hızlı Kurye",
   "description": "Hızlı Kurye - Your fast and reliable delivery partner.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#1c1c1c",
+  "background_color": "#f0f2f5",
+  "theme_color": "#3b82f6",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "https://placehold.co/192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "https://placehold.co/512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
