--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/next": "^1.13.0",
+    "@genkit-ai/googleai": "^1.14.0",
+    "@genkit-ai/next": "^1.14.0",
     "@hookform/resolvers": "^4.1.3",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -42,7 +43,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.13.0",
+    "genkit": "^1.14.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -60,7 +61,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/yandex-maps": "^2.1.24",
-    "genkit-cli": "^1.13.0",
+    "genkit-cli": "^1.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
