--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@genkit-ai/googleai": "^1.14.0",
     "@genkit-ai/next": "^1.14.0",
     "@hookform/resolvers": "^4.1.3",
-    "@pbe/react-yandex-maps": "^1.2.5",
+    "@react-google-maps/api": "^2.19.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -61,7 +61,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/yandex-maps": "^2.1.24",
     "genkit-cli": "^1.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
